# chiral-center

./: .env.example  .gitattributes  .gitignore  LICENSE  README-EN.md  README.md  vercel.json
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/api/: router.py
backend/api/routes/: __init__.py  database.py  documents.py  graph.py  graphrag.py  ontology.py  persona_crawler.py  report.py  research.py  simulation.py  tasks.py  token_usage.py
backend/core/: adaptive_profiler.py  agent_context.py  auto_search.py  crawler.py  db_connector.py  db_indexer.py  discussion_memory.py  discussion_state.py  document_processor.py  fixed_roles.py  graph_builder.py  graph_updater.py  graphiti_extractor.py  graphrag_engine.py  hybrid_extractor.py  koner_extractor.py  ontology_builder.py  ontology_builder_gpt.py  persona_factory.py  persona_profiler.py  report_generator.py  session.py  simulation_runner.py  simulation_runner_gpt.py  speaker_selector.py  task_manager.py  token_tracker.py
backend/core/research/: README.md  __init__.py  dedupe.py  evaluator.py  followup_query_generator.py  normalize.py  orchestrator.py  planner.py  synthesizer.py
backend/db/: neo4j_client.py
backend/db/queries/: __init__.py  edge_queries.py  node_queries.py
backend/llm/: anthropic_client.py  base.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py  qwen_client.py
backend/models/: __init__.py  document.py  graphrag.py  ontology.py  persona.py  report.py  simulation.py
backend/tests/research/: test_dedupe.py  (+3 more)
backend/utils/: chunker.py  embedder.py  logger.py
(+66 files in other folders)
